--- a/i3/config
+++ b/i3/config
@@ -16,8 +16,8 @@ set $mod Mod4
 
 #default settings
 font pango:monospace 8
-default_border pixel 0
-
+default_border none
+default_floating_border none
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -32,15 +32,13 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --rate 60.00
 exec --no-startup-id xrandr --setprovideroutputsource modesetting NVIDIA-0
-exec --no-startup-id xset s off -dpms
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -167,7 +165,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # lock i3 screen
-bindsym $mod+l exec i3lock
+bindsym $mod+l exec betterlockscreen -l dim
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -177,16 +175,16 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink width 1 px or 1 ppt
+        bindsym k resize grow height 1 px or 1 ppt
+        bindsym l resize shrink height 1 px or 1 ppt
+        bindsym semicolon resize grow width 1 px or 1 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width 1 px or 1 ppt
+        bindsym Down resize grow height 1 px or 1 ppt
+        bindsym Up resize shrink height 1 px or 1 ppt
+        bindsym Right resize grow width 1 px or 1 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -210,5 +208,8 @@ bindsym Print exec scrot ~/stuff/screenshots/%Y-%m-%d-%T-screenshot.png
 bindsym --release Shift+Print exec scrot ~/stuff/screenshots/%Y-%m-%d-%T-screenshot.png --select --line mode=edge
 
 #screen brightnesses
-bindsym XF86MonBrightnessUp exec brillo -q -A 10
-bindsym XF86MonBrightnessDown exec brillo -q -U 10
+bindsym XF86MonBrightnessUp exec light -q -A 10
+bindsym XF86MonBrightnessDown exec light -q -U 10
+
+#remove all window borders
+for_window [all] border pixel 0
