--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -103,7 +103,7 @@ shadow-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.85;
+inactive-opacity = 0.88;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -114,7 +114,7 @@ frame-opacity = 0.92;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.95
+active-opacity = 0.96;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -131,24 +131,29 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-    #opacity-rule = [ 
-      #"80:class_g = 'URxvt'",   
+    #opacity-rule = [
+      #"80:class_g = 'URxvt'",
      #];
 #
 
 opacity-rule = [
   "100:class_g = 'Google-chrome'",
-  "100:class_g = 'discord' && focused",
-  "92:class_g = 'discord' && !focused",
+  "100:class_g = 'discord'",
   "98:class_g = 'Code' && focused",
-  "92:class_g = 'Code' && !focused",
   "98:class_g = 'Insomnia' && focused",
-  "92:class_g = 'Insomnia' && !focused",
-  "100:class_g = 'TelegramDesktop' && focused",
-  "100:class_g = 'VirtualBox Manager'",
-  "100:class_g = 'VirtualBox Machine'",
   "100:class_g = 'parsecd'",
-  "92:class_g = 'TelegramDesktop' && !focused",
+  "100:class_g = 'Steam'",
+  "100:class_g = 'dota2'",
+  "100:class_g = 'Apex Legends'",
+  "100:class_g = 'steam_app_1172470'",
+  "100:class_g = 'komikku'",
+  "100:class_g = 'steam_app_374320'",
+  "100:class_g = 'steam'",
+  "100:class_g = 'Zathura'",
+  "100:class_g = 'Virt-manager'",
+  "100: class_g = 'steam_app_570'",
+  "100: class_g = 'TelegramDesktop'",
+  "100: class_g = 'Postman'"
 ]
 
 #################################
