--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,6 +26,7 @@ alert = #A54242
 disabled = #707880
 pinky = #D0758B
 white = #FFFFFF
+dark = #161616
 
 [bar/bankai-lain]
 width = 100%
@@ -47,10 +48,13 @@ padding-right = 1
 module-margin = 1
 
 font-0 = "FiraCode Nerd Font:size=12;4"
+font-1 = "Tamsyn:pixelsize=12;4"
+font-2 = "Roboto:size=12;4"
+font-3 = "Noto Sans:size=12;4"
 
 modules-left = xworkspaces
 modules-center = date
-modules-right = pulseaudio xkeyboard battery
+modules-right = xkeyboard pulseaudio battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -70,6 +74,7 @@ type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${colors.pinky}
+label-active-foreground = ${colors.dark}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -119,29 +124,39 @@ label-muted = 󰖁 muted
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
-type = internal/xkeyboard 
+type = internal/xkeyboard
 blacklist-0 = num lock
 
-format = "<label-layout> <label-indicator>"
-format-prefix = "  "
+format = "<label-indicator> %{F#D0758B} %{F-} <label-layout>"
+
 format-prefix-foreground = ${colors.pinky}
 
 label-layout = %layout%
 
-label-indicator-padding = 2
+layout-icon-default = some-icon
+layout-icon-0 = us;us
+layout-icon-1 = ru;ru
+layout-icon-2 = ua;ua
+
+label-indicator-padding = 1
 label-indicator-margin = 0
 label-indicator-background = ${colors.pinky}
+label-indicator-foreground = ${colors.dark}
 
 [module/date]
 type = internal/date
+format = "<label>"
+format-foreground = ${colors.dark}
+format-background = ${colors.pinky}
 interval = 1
 
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M
+date-alt = %d.%m.%y %H:%M
 
 label = %date%
-label-foreground = ${colors.foreground}
+label-foreground = ${colors.dark}
 label-background = ${colors.pinky}
+label-font = 0
 label-padding = 1
 
 [module/battery]
