update: added new fields for opacity rules

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -151,9 +151,11 @@ opacity-rule = [
   "100:class_g = 'steam'",
   "100:class_g = 'Zathura'",
   "100:class_g = 'Virt-manager'",
-  "100: class_g = 'steam_app_570'",
-  "100: class_g = 'TelegramDesktop'",
-  "100: class_g = 'Postman'"
+  "100:class_g = 'steam_app_570'",
+  "100:class_g = 'TelegramDesktop'",
+  "100:class_g = 'Postman'",
+  "100:class_g = 'notion-app'",
+  "100:class_g = 'obsidian'"
 ]
 
 #################################
