update: add new opacity rules in picom.conf

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -155,7 +155,8 @@ opacity-rule = [
   "100:class_g = 'TelegramDesktop'",
   "100:class_g = 'Postman'",
   "100:class_g = 'notion-app'",
-  "100:class_g = 'obsidian'"
+  "100:class_g = 'firefox'",
+  "100:class_g = 'Chromium'",
 ]
 
 #################################
